# fmus-fintech

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
examples/: erc20_example.py  ethereum_example.py
fmus_fintech/: __init__.py
fmus_fintech/chains/: __init__.py  erc20.py  ethereum.py  ethereum_contract.py
fmus_fintech/core/: __init__.py  contract.py  network.py  transaction.py  wallet.py
fmus_fintech/utils/: __init__.py  validation.py
tests/unit/: test_erc20.py  test_ethereum.py  test_wallet.py
