[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmus-fintech"
version = "0.0.1"
description = "A Python library for Web3 and blockchain interactions"
readme = "README.md"
authors = [
    {name = "Yusef Ulum"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Finance :: Cryptocurrencies",
]
keywords = ["blockchain", "web3", "cryptocurrency", "ethereum", "solana", "bitcoin", "defi", "nft"]
requires-python = ">=3.8"
dependencies = [
    "web3>=6.0.0",
    "solana>=0.30.0",
    "bitcoinlib>=0.6.0",
    "httpx>=0.24.0",
    "websockets>=11.0.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "msgpack>=1.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
    "bandit>=1.7.5",
    "pre-commit>=3.3.2",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.1",
    "sphinxcontrib-napoleon>=0.7",
    "sphinx-autodoc-typehints>=1.23.0",
]
storage = [
    "ipfshttpclient>=0.8.0",
    "diskcache>=5.6.1",
]

[project.urls]
"Homepage" = "https://github.com/mexyusef/fmus-fintech"
"Bug Tracker" = "https://github.com/mexyusef/fmus-fintech/issues"
"Documentation" = "https://fmus-fintech.readthedocs.io/"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=fmus_fintech --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
